fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -333,8 +333,17 @@ main {
     max-width: 70%;
   }
 
-  #searchInput{
+  #searchInput {
     width: 250px;
     height: 40px;
     font-size: 25px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  
+  #searchBtn {
+    width: 90px;
+    height: 40px;
+    display: inline-block;
+    vertical-align: middle;
   }
